CSS: Fix too much padding on definion lists
When using:

```
.. _ref-link-1:

Term
   definition.

.. _ref-link-2:

Term
   definition.
   
.. _ref-link-2:

Term
   definition.
```

Gives different results then:

```

Term
   definition.

Term
   definition.

Term
   definition.
```

This might be a sphinx bug but for now lets limit the margin.



git-svn-id: https://svn.blender.org/svnroot/bf-manual/trunk/blender_docs@7774 c4de1f47-6596-e411-a384-0024e86c2797

--- a/resources/theme/css/theme_overrides.css
+++ b/resources/theme/css/theme_overrides.css
@@ -79,6 +79,11 @@ input[type="number"], input[type="tel"], input[type="color"] {
 	display: inline;
 }
 
+/* Fix definisions with different ids. */
+.rst-content dl.simple {
+	margin-bottom: 0px;
+}
+
 /* Fix nested block spacing. */
 .rst-content .document dl dt,
 .rst-content dd dl,
